re-initialize vectorstore

--- a/notebooks/rag_pipeline.ipynb
+++ b/notebooks/rag_pipeline.ipynb
@@ -2,30 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ea21c94e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1804b271",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
     "groq_api_key = os.environ.get(\"GROQ_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0f29322c",
    "metadata": {},
    "outputs": [
@@ -35,7 +46,7 @@
        "56"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "875bf9e9",
    "metadata": {},
    "outputs": [
@@ -87,15 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1b342c41",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1584\\2335338193.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Vector store created with 98 embeddings\n"
+      "WARNING:tensorflow:From c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "Vector store created with 98 embeddings\n"
      ]
     }
    ],
@@ -118,12 +139,12 @@
     "    persist_directory=\"../data/chroma_db\"\n",
     ")\n",
     "\n",
-    "print(f\"✅ Vector store created with {len(split_texts)} embeddings\")"
+    "print(f\"Vector store created with {len(split_texts)} embeddings\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0d5c0b87",
    "metadata": {},
    "outputs": [],
@@ -136,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "cf5454f9",
    "metadata": {},
    "outputs": [
@@ -144,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9756\\2105759968.py:5: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1584\\2105759968.py:5: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
       "  memory = ConversationBufferMemory(\n"
      ]
     }
@@ -163,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2da8f658",
    "metadata": {},
    "outputs": [
@@ -171,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Connected to Groq LLM (llama-3.3-70b-versatile)\n"
+      "Connected to Groq LLM (llama-3.3-70b-versatile)\n"
      ]
     }
    ],
@@ -212,12 +233,12 @@
     "    max_tokens=1024\n",
     ")\n",
     "\n",
-    "print(\"✅ Connected to Groq LLM (llama-3.3-70b-versatile)\")"
+    "print(\"Connected to Groq LLM (llama-3.3-70b-versatile)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4b5a8803",
    "metadata": {},
    "outputs": [],
@@ -249,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "4b05f11c",
    "metadata": {},
    "outputs": [],
@@ -273,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "f299c8f1",
    "metadata": {},
    "outputs": [
@@ -281,11 +302,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Lekki Bridge project is a 2.4-kilometer reinforced concrete bridge construction project along the Lekki-Epe Expressway coastal corridor. The goal of the project is to reduce traffic congestion and improve coastal connectivity as part of the Lagos State Infrastructure Development Initiative. The project involves a range of activities, including detailed engineering design, site preparation, construction of the bridge foundation, erection of the superstructure, installation of drainage and safety systems, and more. The project is expected to commence on May 1, 2025, and be completed by April 30, 2027, with a 24-month defects liability period. \n",
+      "The Lekki Bridge project is a 2.4-kilometer reinforced concrete bridge construction project along the Lekki-Epe Expressway coastal corridor. The goal of the project is to reduce traffic congestion and improve coastal connectivity as part of the Lagos State Infrastructure Development Initiative. The project involves a range of responsibilities, including detailed engineering design, site preparation, construction of the bridge foundation, erection of the superstructure, installation of drainage and safety systems, and more. The bridge will span from Admiralty Way Junction to Chevron Drive, crossing the tidal lagoon section. \n",
       "\n",
-      "To determine bid feasibility, we would need to assess your company's capabilities in terms of experience with similar projects, available resources, and expertise in areas like bridge construction, soil stabilization, and environmental impact mitigation. We should also consider the project's requirements, such as the 24-month contract period and the need for quality assurance and testing protocols. \n",
-      "\n",
-      "Can you tell me more about your company's experience and capabilities in bridge construction and large-scale infrastructure projects?\n"
+      "To determine if this project is a good fit for your company, I'd like to know more about your company's capabilities and experience with similar projects. What's your company's background in bridge construction, and have you worked on projects of this scale before?\n"
      ]
     }
    ],
@@ -296,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "af3c1847",
    "metadata": {},
    "outputs": [
@@ -304,15 +323,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be eligible to bid on the Lekki Bridge project, companies must meet certain key requirements. \n",
+      "To be eligible to bid on the Lekki Bridge project, companies must meet two main sets of requirements: Company Registration Requirements and Technical Requirements.\n",
       "\n",
-      "Firstly, from a registration perspective, bidders need to possess a valid Corporate Affairs Commission (CAC) registration certificate, a Tax Clearance Certificate for the current year (2025), evidence of registration with the Federal Inland Revenue Service (FIRS), a VAT registration certificate, and a Pension Commission (PenCom) compliance certificate.\n",
+      "Under Company Registration Requirements, bidders must possess:\n",
+      "1. A valid Corporate Affairs Commission (CAC) registration certificate\n",
+      "2. A Tax Clearance Certificate for the current year (2025)\n",
+      "3. Evidence of registration with the Federal Inland Revenue Service (FIRS)\n",
+      "4. A VAT registration certificate\n",
+      "5. A Pension Commission (PenCom) compliance certificate\n",
       "\n",
-      "From a technical standpoint, bidders must have a minimum of 10 years of operational experience in civil engineering construction and have successfully completed at least three bridge construction projects within the last 7 years.\n",
+      "In terms of Technical Requirements, bidders must have:\n",
+      "1. A minimum of 10 years of operational experience in civil engineering construction\n",
+      "2. Successful completion of at least three bridge construction projects within the last 7 years\n",
       "\n",
-      "These eligibility criteria are non-negotiable, and bidders must meet all of them to be considered for the project. \n",
+      "These requirements are mandatory, and bidders must meet all of them to be considered for the contract award. The contract will be awarded to the bidder with the highest combined technical and financial score, provided they meet all the eligibility requirements and have an acceptable financial standing and integrity. \n",
       "\n",
-      "Does your company meet these registration and technical requirements?\n"
+      "To assess whether your company is eligible, can you tell me about your company's registration status and technical experience, particularly in bridge construction?\n"
      ]
     }
    ],
@@ -323,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "545ddca4",
    "metadata": {},
    "outputs": [
@@ -331,22 +357,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided document, it appears that Elalan Construction Limited meets the key eligibility requirements for bidders on the Lekki Bridge project.\n",
+      "With the additional context information, I can now confirm that Elalan Construction Limited meets the requirements for the Lekki Bridge project.\n",
       "\n",
-      "From a registration perspective, although the document doesn't explicitly mention the required registration certificates, it does establish Elalan Construction Limited as a legitimate company with a long history of operations in Nigeria, which suggests they likely have the necessary registrations.\n",
+      "Firstly, regarding company registration, although the document does not explicitly mention their registration status, it can be inferred that Elalan Construction Limited is a registered company, as they have been operating since 2001 and have worked on significant projects, including the Third Mainland Bridge rehabilitation project.\n",
       "\n",
-      "From a technical standpoint, Elalan Construction Limited has over 23 years of experience in civil engineering construction, which exceeds the 10-year requirement. They also specialize in bridge construction, among other areas, and have a distinguished portfolio of over 180 successfully completed projects valued at over ₦120 billion cumulatively. This suggests they have the necessary technical expertise and experience to handle a project like the Lekki Bridge.\n",
+      "On the technical side, Elalan Construction Limited has demonstrated exceptional technical competence and project management skills, as evidenced by the formal feedback from the Federal Ministry of Works and Housing (FMWH) in October 2018. The feedback commends their proactive approach to traffic management and safety, and states that they would not hesitate to engage Elalan for future projects of similar scale and complexity.\n",
       "\n",
-      "Additionally, the company's experience in handling complex, high-value infrastructure projects, including bridge construction, indicates they likely have the capacity to meet the technical requirements of the Lekki Bridge project.\n",
+      "The Third Mainland Bridge rehabilitation project, which was completed 2 months ahead of schedule and within budget, demonstrates Elalan's technical competence and project management excellence. The project highlights include:\n",
       "\n",
-      "However, to confirm their eligibility, I would need to see specific documentation, such as their CAC registration certificate, Tax Clearance Certificate, and evidence of registration with the Federal Inland Revenue Service (FIRS), among others. \n",
+      "* Contract Value: ₦2.8 billion\n",
+      "* Duration: 18 months (Planned: 20 months)\n",
+      "* Completion Status: 100%\n",
+      "* Cost Performance: Within budget (0.8% under)\n",
+      "* Quality Rating: Excellent (98.5% compliance)\n",
+      "* Safety Record: Zero fatalities, LTIFR 0.08\n",
       "\n",
-      "It's also important to review their experience with similar projects, particularly bridge construction, to assess their ability to deliver the Lekki Bridge project successfully.\n"
+      "This experience meets the requirement for successful completion of at least three bridge construction projects within the last 7 years, as the Third Mainland Bridge rehabilitation project was completed in 2018.\n",
+      "\n",
+      "Additionally, Elalan Construction Limited has more than 10 years of operational experience in civil engineering construction, which meets the minimum experience requirement.\n",
+      "\n",
+      "Based on this information, I conclude that Elalan Construction Limited meets the eligibility requirements for the Lekki Bridge project, including company registration, technical competence, and experience with bridge construction projects.\n"
      ]
     }
    ],
    "source": [
-    "response3 = chat_with_memory(\"Does Elalan Construction meet these requirements?\")\n",
+    "response3 = chat_with_memory(\"Does Elalan Construction meet these requirements? Dont forget about the Third Mainland Bridge Project\")\n",
     "print(response3)"
    ]
   }
